Fixed spacing and started creation of Faq

--- a/assets/css/splashpage/splash.css
+++ b/assets/css/splashpage/splash.css
@@ -1,7 +1,3 @@
-.hero-container {
-  height: 60vh;
-}
-
 /* The hero image */
 .hero-image {
   background: url('~assets/img/logo_white.png') no-repeat center center fixed;
